# tscli

./: .gitignore  README.md  pyproject.toml
src/tscli/: __init__.py  __main__.py  analysis.py  data.py  forecasting.py  main.py  model_catalog.py  preprocessing.py
